--- a/app/views/shared/header.jade
+++ b/app/views/shared/header.jade
@@ -2,3 +2,14 @@ nav(class="navbar navbar-default")
     div(class="container-fluid")
         div(class="navbar-header")
             a(class="navbar-brand" href="#") Inteligencia artificial
+        div(class="collapse navbar-collapse ")
+            ul(class="nav navbar-nav navbar-right")
+                li(class="dropdown")
+                    a(class="dropdown-toggle", data-toggle="dropdown", aria-expanded="false") Problemas
+                        span(class="caret")
+                    ul(class="dropdown-menu", role="menu")
+                        li
+                            a(href="/inteligencia-artificial/tanques-de-agua")
+                                |Tanques de agua
+                            a(href="/inteligencia-artificial/monges-y-canibales/")
+                                |Canibales y monjes
