--- a/app/views/shared/layout.jade
+++ b/app/views/shared/layout.jade
@@ -2,6 +2,8 @@ doctype
 html(lang="es")
   head
     link(rel="stylesheet", href='/components/bootswatch-dist/css/bootstrap.css')
+    script(src="/components/jquery/dist/jquery.js")
+    script(src="/components/bootswatch-dist/js/bootstrap.js")
     meta(charset="UTF-8")
     block title
       title Inteligencia artificial
