--- a/app/views/inteligencia-artificial/monjes_canibales.jade
+++ b/app/views/inteligencia-artificial/monjes_canibales.jade
@@ -1,14 +1,15 @@
 extends ../shared/layout
 
 block title
-    title Problema de monjes y canibales
+    title(class="text-center")
+        |Problema de monjes y canibales
 block content
-    h1 Problema de monjes y canibales
+    h1(class="text-center")
+        |Problema de monjes y canibales
     for e in grafo
         table(class="table table-striped table-hover")
             tr
-                th Node inicial
+                th Node inicial (#{e.c} , #{e.m}, #{e.b})
             tr
-                td (#{e.c} , #{e.m}, #{e.b})
-                for hijo in e.hijos
-                    td (#{hijo.c} , #{hijo.m}, #{hijo.b}, #{hijo.mv})
+            for hijo in e.hijos
+                td (#{hijo.c} , #{hijo.m}, #{hijo.b})
