--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -2,4 +2,5 @@ extends ../shared/layout
 block title
     title Inteligencia artificial
 block content
-    h1 Inteligencia artificial
+    h1(class="text-center")
+        |Inteligencia artificial
